# kfp-recommender

./: LICENSE  README.md  pyproject.toml
.github/workflows/: claude.yml
src/kfp_recommender/: __init__.py
src/kfp_recommender/components/: __init__.py  irspack_trainer.py  trainer_logic.py
src/kfp_recommender/examples/: __init__.py  training_pipeline.py
src/kfp_recommender/utils/: __init__.py  data_utils.py
tests/: __init__.py  test_irspack_trainer.py
