[project]
name = "kfp-recommender"
version = "0.1.0"
description = "KFP Components for Recommender Systems using irspack"
readme = "README.md"
authors = [
    { name = "Keisuke Hirota", email = "tahiro.k.ad@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "kfp>=2.0.0",
    "irspack>=0.5.0",
    "pandas>=1.5.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
